--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,10 @@ layout: default
     <h2>{{ page.subtitle }}</h2>
     {% endif %}
     
+    <div class="post-announcement">
+        {{ page.announcement }}
+    </div>
+
     <div class="post-content">
         {{ content }}
     </div>
